1. Blog Transparent Menu Issue Resolved 2. Sitemap Menu Spaces Changed 3. Top Menu Z-index Added

--- a/skit_website/skit_blog/static/src/css/blog_style.css
+++ b/skit_website/skit_blog/static/src/css/blog_style.css
@@ -7,6 +7,7 @@
 	height: 700px;
 	/* overflow-y: scroll; */
 	background-color: whitesmoke;
+	margin-top: -13em;
 }
 
 .article-card__snippet {
@@ -105,6 +106,7 @@
 
 .rows_view {
 margin-bottom: 2rem;
+margin-top: 20%;
 }
 
 .column_view:nth-child(5n):nth-child(odd), .column_view:nth-child(8n),
