--- a/skit_website/skit_snippets/static/src/css/sitemap.css
+++ b/skit_website/skit_snippets/static/src/css/sitemap.css
@@ -48,7 +48,7 @@
 }
 
 .sitemap_4 {
-	display:inline-block;width:100%;
+	display:inline-block;width:6rem;text-align:center;
 }
 
 .sitemap_5 {
