--- a/skit_website/skit_website_menu/static/src/css/about.css
+++ b/skit_website/skit_website_menu/static/src/css/about.css
@@ -18,6 +18,7 @@
 	font-size: 68px;
 	font-weight: 900;
 	color: rgba(0, 0, 0, 0.21);
+	margin: 5rem;
 }
 
 .sks-sec2-content {
