--- a/skit_website/skit_website_menu/static/src/scss/topmenu.scss
+++ b/skit_website/skit_website_menu/static/src/scss/topmenu.scss
@@ -6,3 +6,7 @@
 	z-index: 9;
 	color: #fff;
 }
+
+.navbar {
+	z-index: 9;
+}
